# machines-attoparsec

./: .travis.yml  README.markdown  machines-attoparsec.cabal
src/Data/Attoparsec/: Machine.hs
tests/: doctests.hs
