name:                machines-attoparsec
version:             0.1.0.0
synopsis:            Attoparsec machine fittings.
description:         Convert attoparsec parsers to machines.
homepage:            https://github.com/lodvaer/machines-attoparsec
bug-reports:         https://github.com/lodvaer/machines-attoparsec/issues
license:             BSD3
license-file:        LICENSE
author:              Lodvær
maintainer:          lodvaer@gmail.com
category:            Control, Enumerator, Parsing, Text
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/lodvaer/machines-attoparsec.git

library
  exposed-modules:   Data.Attoparsec.Machine

  build-depends:     base ==4.*
                   , machines >=0.4 && <0.6
                   , attoparsec ==0.12.*
                   , bytestring
                   , text
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite doctests
  type:              exitcode-stdio-1.0
  main-is:           doctests.hs
  default-language:  Haskell2010
  build-depends:     base == 4.*
                   , doctest >= 0.8 && <= 0.10
                   , case-insensitive
  ghc-options:       -Wall -threaded
  hs-source-dirs:    tests
